0.5.3
-----
1. Add mouse-wheel control of volume.
2. Revert change for auto-layout on mobile browsers - seems broken on iPad.
3. Minify all CSS.
4. Mark some event handlers as passive, to silence chrome warnings.
5. Add mute/unmute to volume dialog.

0.5.2
-----
1. Fix starting chrome media session.
2. If now-playing timer is 2 seconds or more past duration, refresh status.
3. Refresh player status when app gets focus on mobile.
4. If library_id is set, then pass down to all subsequent list commands.
5. Fix update detection when rename favourite.
6. If list is cancellable, reset token after call.
7. Improve queue performance with many (e.g. 500) items.

0.5.1
-----
 1. Better display of time in now-playing.
 2. Fix updating time in now-playing.
 3. Fix favourites update handling, due to error with logging.
 4. Tweak mobile now-playing progressbar position.
 5. Use dialog to set sleep.
 6. Fix 'Play album starting at track'
 7. Fix sleep timer countdown display.
 8. Hacky workaround for 'pause' not working in media controls. Always show
    play button, but prefix title wth a pause character when paused.
 9. Add button to 'manage players' dialog to set sleep time for all players.
10. Allow auto-layout for mobile browsers - but only allow desktop layout if
    both height and width are 600px or more.
11. Fix radio search listings that have no favourite URL and duplicate titles.

0.5.0
-----
 1. When browsing, load all list items (max 25k) at once. Use view recycler
    library to keep lists responsive - only items on screen are part of the HTML
    page. An A..Z quick list is shown to the left of the list allowing to
    quickly jump within list.
 2. Due to the above, a maximum of 300 items can be shown in a grid, if there
    are more then a list is used.
 3. Optionally show a large letter when scrolling lists, to indicate current
    position. Thanks to sanc909 for the original idea and code.