@@ -28,7 +28,7 @@ var lmsNowPlaying = Vue.component("lms-now-playing", {
    <v-btn flat icon @click="doAction(['button', 'jump_rew'])"><v-icon large>skip_previous</v-icon></v-btn>
   </v-flex>
   <v-flex xs3>
-   <v-btn flat icon v-longpress="playPauseButton" id="playPause"><v-icon large v-if="playerStatus.isplaying">pause</v-icon><v-icon large v-else>play_arrow</v-icon></v-btn>
+   <v-btn flat icon v-longpress="playPauseButton" @click.middle="showSleep" id="playPause"><v-icon large v-if="playerStatus.isplaying">pause</v-icon><v-icon large v-else>play_arrow</v-icon></v-btn>
   </v-flex>
   <v-flex xs3>
    <v-btn flat icon @click="doAction(['stop'])"><v-icon large>stop</v-icon></v-btn>
@@ -42,7 +42,7 @@ var lmsNowPlaying = Vue.component("lms-now-playing", {
    <v-btn flat icon @click="doAction(['button', 'jump_rew'])" class="np-std-button"><v-icon large>skip_previous</v-icon></v-btn>
   </v-flex>
   <v-flex xs4>
-   <v-btn flat icon v-longpress="playPauseButton" id="playPause" class="np-playpause"><v-icon x-large v-if="playerStatus.isplaying">pause_circle_outline</v-icon><v-icon x-large v-else>play_circle_outline</v-icon></v-btn>
+   <v-btn flat icon v-longpress="playPauseButton" @click.middle="showSleep" id="playPause" class="np-playpause"><v-icon x-large v-if="playerStatus.isplaying">pause_circle_outline</v-icon><v-icon x-large v-else>play_circle_outline</v-icon></v-btn>
   </v-flex>
   <v-flex xs4>
    <v-btn flat icon @click="doAction(['playlist', 'index', '+1'])"class="np-std-button" ><v-icon large>skip_next</v-icon></v-btn>
@@ -180,13 +180,13 @@ var lmsNowPlaying = Vue.component("lms-now-playing", {
       <v-flex xs4>
        <v-layout v-if="stopButton" text-xs-center>
         <v-flex xs6>
-         <v-btn flat icon v-longpress="playPauseButton" id="playPause"><v-icon large v-if="playerStatus.isplaying">pause</v-icon><v-icon large v-else>play_arrow</v-icon></v-btn>
+         <v-btn flat icon v-longpress="playPauseButton" @click.middle="showSleep" id="playPause"><v-icon large v-if="playerStatus.isplaying">pause</v-icon><v-icon large v-else>play_arrow</v-icon></v-btn>
         </v-flex>
         <v-flex xs6>
          <v-btn flat icon @click="doAction(['stop'])"><v-icon large>stop</v-icon></v-btn>
         </v-flex>
        </v-layout>
-       <v-btn flat icon large v-else v-longpress="playPauseButton" id="playPause" class="np-playpause"><v-icon x-large v-if="playerStatus.isplaying">pause_circle_outline</v-icon><v-icon x-large v-else>play_circle_outline</v-icon></v-btn>
+       <v-btn flat icon large v-else v-longpress="playPauseButton" @click.middle="showSleep" id="playPause" class="np-playpause"><v-icon x-large v-if="playerStatus.isplaying">pause_circle_outline</v-icon><v-icon x-large v-else>play_circle_outline</v-icon></v-btn>
       </v-flex>
       <v-flex xs4>
        <v-layout text-xs-center>
@@ -242,13 +242,13 @@ var lmsNowPlaying = Vue.component("lms-now-playing", {
    <v-flex xs4>
     <v-layout v-if="stopButton" text-xs-center>
      <v-flex xs6>
-      <v-btn flat icon v-longpress="playPauseButton" id="playPause"><v-icon large v-if="playerStatus.isplaying">pause</v-icon><v-icon large v-else>play_arrow</v-icon></v-btn>
+      <v-btn flat icon v-longpress="playPauseButton" @click.middle="showSleep" id="playPause"><v-icon large v-if="playerStatus.isplaying">pause</v-icon><v-icon large v-else>play_arrow</v-icon></v-btn>
      </v-flex>
      <v-flex xs6>
       <v-btn flat icon @click="doAction(['stop'])"><v-icon large>stop</v-icon></v-btn>
      </v-flex>
     </v-layout>
-    <v-btn flat icon large v-else v-longpress="playPauseButton" id="playPause" class="np-playpause"><v-icon x-large v-if="playerStatus.isplaying">pause_circle_outline</v-icon><v-icon x-large v-else>play_circle_outline</v-icon></v-btn>
+    <v-btn flat icon large v-else v-longpress="playPauseButton" @click.middle="showSleep" id="playPause" class="np-playpause"><v-icon x-large v-if="playerStatus.isplaying">pause_circle_outline</v-icon><v-icon x-large v-else>play_circle_outline</v-icon></v-btn>
    </v-flex>
    <v-flex xs4>
     <v-layout text-xs-center>
@@ -691,6 +691,9 @@ var lmsNowPlaying = Vue.component("lms-now-playing", {
             } else {
                 this.doAction([this.playerStatus.isplaying ? 'pause' : 'play']);
             }
+        },
+        showSleep() {
+            bus.$emit('dlg.open', 'sleep', this.$store.state.player);
         },
         getRating() {
             if (undefined!=this.rating.id) {
