@@ -117,11 +117,11 @@ Vue.component('lms-toolbar', {
  <v-btn icon v-else-if="!desktop" @click.native="bus.$emit('playerCommand', ['play'])" class="toolbar-button">
   <v-icon>play_circle_outline</v-icon>
  </v-btn>
- <v-btn v-if="desktop" :disabled="!playerStatus.ison" icon flat class="toolbar-button" v-longpress="volumeDown" id="vol-down-btn"><v-icon>{{playerVolume.muted ? 'volume_off' : 'volume_down'}}</v-icon></v-btn>
+ <v-btn v-if="desktop" :disabled="!playerStatus.ison" icon flat class="toolbar-button" v-longpress="volumeDown" @click.middle="toggleMute" id="vol-down-btn"><v-icon>{{playerVolume.muted ? 'volume_off' : 'volume_down'}}</v-icon></v-btn>
  <v-slider v-if="desktop" :disabled="!playerStatus.ison" step="1" v-model="playerVolume.val" class="vol-slider" id="vol-slider"></v-slider>
- <v-btn v-if="desktop" :disabled="!playerStatus.ison" icon flat class="toolbar-button" v-longpress="volumeUp" id="vol-up-btn"><v-icon>{{playerVolume.muted ? 'volume_off' : 'volume_up'}}</v-icon></v-btn>
+ <v-btn v-if="desktop" :disabled="!playerStatus.ison" icon flat class="toolbar-button" v-longpress="volumeUp" @click.middle="toggleMute" id="vol-up-btn"><v-icon>{{playerVolume.muted ? 'volume_off' : 'volume_up'}}</v-icon></v-btn>
  <p v-if="desktop" :disabled="!playerStatus.ison" class="vol-label">{{playerVolume.val|displayVolume}}%</p>
- <v-btn v-else-if="!desktop" :disabled="!playerStatus.ison" icon flat class="toolbar-button" v-longpress="volumeClick" id="vol-btn">
+ <v-btn v-else-if="!desktop" :disabled="!playerStatus.ison" icon flat class="toolbar-button" v-longpress="volumeClick" @click.middle="toggleMute" id="vol-btn">
   <v-icon v-if="playerStatus.volume>0">volume_up</v-icon>
   <v-icon v-else-if="playerStatus.volume==0">volume_down</v-icon>
   <v-icon v-else>volume_off</v-icon>
@@ -439,6 +439,9 @@ Vue.component('lms-toolbar', {
             } else {
                 bus.$emit('dlg.open', 'volume');
             }
+        },
+        toggleMute() {
+            bus.$emit('playerCommand', ['mixer', 'muting', 'toggle']);
         },
         cancelSleepTimer() {
             this.playerStatus.sleepTime = undefined;
